test/conformance/chainsaw/validate/clusterpolicy/standard/audit-deprecated/background-match-roles/chainsaw-step-02-error-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-match-roles
spec:
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
        roles:
        - foo-role
    name: ns-roles
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: ?*
  validationFailureAction: Audit
